welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:5: error: identifier expected but integer literal found.
	case(1,vacation) => if(vacation==false) { return 7:00} else {return 10:00}
                                                           ^alarmClock:5: error: identifier expected but integer literal found.
	case(1,vacation) => if(vacation==false) { return 7:00} else {return 10:00}
                                                                               ^alarmClock:6: error: identifier expected but integer literal found.
	case(2,vacation) => if(vacation==false) { return 7:00} else {return 10:00}
                                                           ^alarmClock:6: error: identifier expected but integer literal found.
	case(2,vacation) => if(vacation==false) { return 7:00} else {return 10:00}
                                                                               ^alarmClock:7: error: identifier expected but integer literal found.
	case(3,vacation) => if(vacation==false) { return 7:00} else {return 10:00}
                                                           ^alarmClock:7: error: identifier expected but integer literal found.
	case(3,vacation) => if(vacation==false) { return 7:00} else {return 10:00}
                                                                               ^alarmClock:8: error: identifier expected but integer literal found.
	case(4,vacation) => if(vacation==false) { return 7:00} else {return 10:00}
                                                           ^alarmClock:8: error: identifier expected but integer literal found.
	case(4,vacation) => if(vacation==false) { return 7:00} else {return 10:00}
                                                                               ^alarmClock:9: error: identifier expected but integer literal found.
	case(5,vacation) => if(vacation==false) { return 7:00} else {return 10:00}
                                                           ^alarmClock:9: error: identifier expected but integer literal found.
	case(5,vacation) => if(vacation==false) { return 7:00} else {return 10:00}
                                                                               ^alarmClock:10: error: identifier expected but integer literal found.
	case(6,vacation) => if(vacation==false) { return 10:00} else {return off}
                                                            ^alarmClock:11: error: identifier expected but integer literal found.
	case(0,vacation) => if(vacation==false) { return 10:00} else {return off}
                                                            ^